--- a/src/view/slider.html
+++ b/src/view/slider.html
@@ -1,8 +1,9 @@
 <div class="layui-form-item layui-form-text">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
-        <input readonly autocomplete="off" type="text" {$required}name="{$name}" data-name="name_{$build_view_rand}" value="{$value}"  placeholder="{:lang('build_view_please_input')}{$label}" class="layui-input">
+        <input {volist name="attr" id="vo"}{$vo}{/volist} readonly autocomplete="off" type="text" {$required}name="{$name}" data-name="name_{$build_view_rand}" value="{$value}"  placeholder="{:lang('build_view_please_input')}{$label}" class="layui-input">
         <div id="silder_{$build_view_rand}"></div>
+        {$appendHtml|raw}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
