--- a/src/view/checkbox.html
+++ b/src/view/checkbox.html
@@ -2,8 +2,9 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-{$layui}">
         {foreach $options as $key=>$val}
-        <input type="checkbox" style="display:none!important;" data-name="name_{$build_view_rand}" {$required} name="{$name}[]" title="{$val}" {if in_array($key,$value)}checked{/if} value="{$key}"/>
+        <input type="checkbox" {volist name="attr" id="vo"}{$vo}{/volist} style="display:none!important;" data-name="name_{$build_view_rand}" {$required} name="{$name}[]" title="{$val}" {if in_array($key,$value)}checked{/if} value="{$key}"/>
         {/foreach}
+        {$appendHtml|raw}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
