--- a/src/view/color.html
+++ b/src/view/color.html
@@ -2,7 +2,8 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-inline" style="width: 120px">
         {if isset($required)}<input type="hidden" required>{/if}
-        <input autocomplete="off" type="text" {$min}{$max}name="{$name}" data-name="name_{$build_view_rand}" value="{$value}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_color')}" placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_color')}" class="layui-input">
+        <input autocomplete="off" {volist name="attr" id="vo"}{$vo}{/volist} type="text" {$min}{$max}name="{$name}" data-name="name_{$build_view_rand}" value="{$value}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_color')}" placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_color')}" class="layui-input">
+        {$appendHtml|raw}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
