--- a/src/view/distpicker.html
+++ b/src/view/distpicker.html
@@ -9,7 +9,7 @@ $vo = str_replace('.','_',$vo);
 <div class="layui-form-item layui-form-text">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
-        <input type="text" autocomplete="on" class="layui-input" data-name="name_{$build_view_rand}"  readonly="readonly" data-toggle="city-picker" placeholder="{:lang('build_view_please_select')}{$label}">
+        <input {volist name="attr" id="vo"}{$vo}{/volist} type="text" autocomplete="on" class="layui-input" data-name="name_{$build_view_rand}"  readonly="readonly" data-toggle="city-picker" placeholder="{:lang('build_view_please_select')}{$label}">
         {$appendHtml|raw}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
