--- a/src/view/number.html
+++ b/src/view/number.html
@@ -2,7 +2,8 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {if isset($required)}<input type="hidden" required>{/if}
-        <input autocomplete="off" type="number" step="0.01" {$min}{$max}{$readonly}name="{$name}" value="{$value}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_input')}{$label}" placeholder="{:lang('build_view_please_input')}{$label}" class="layui-input">
+        <input {volist name="attr" id="vo"}{$vo}{/volist} autocomplete="off" type="number" step="0.01" {$min|default="min=0 "}{$max}{$readonly}name="{$name}" value="{$value}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_input')}{$label}" placeholder="{:lang('build_view_please_input')}{$label}" class="layui-input">
+        {$appendHtml|raw}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
