--- a/src/view/timeRange.html
+++ b/src/view/timeRange.html
@@ -4,15 +4,16 @@
         {if isset($required)}<input type="hidden" required>{/if}
         {if is_array($name)}
         <div class="layui-inline">
-            <input  lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_start')}{$label}" name="{$name[0]}" data-name="name_{$build_view_rand}_1"  value="{$value[0]|default=''}"  placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_start')}{$label}" class="layui-input">
+            <input {volist name="attr" id="vo"}{$vo}{/volist} lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_start')}{$label}" name="{$name[0]}" data-name="name_{$build_view_rand}_1"  value="{$value[0]|default=''}"  placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_start')}{$label}" class="layui-input">
         </div>
         <div class="layui-inline">-</div>
         <div class="layui-inline">
-            <input  lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_end')}{$label}" name="{$name[1]}" data-name="name_{$build_view_rand}_1" value="{$value[1]|default=''}"  placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_end')}{$label}" class="layui-input">
+            <input {volist name="attr" id="vo"}{$vo}{/volist} lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{:lang('build_view_please_end')}{$label}" name="{$name[1]}" data-name="name_{$build_view_rand}_1" value="{$value[1]|default=''}"  placeholder="{:lang('build_view_please_select')}{:lang('build_view_please_end')}{$label}" class="layui-input">
         </div>
         {else/}
-        <input lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{$label}" name="{$name}" data-name="name_{$build_view_rand}"  value="{$value}"  placeholder="{:lang('build_view_please_select')}{$label}" class="layui-input">
+        <input {volist name="attr" id="vo"}{$vo}{/volist} lay-verify="{$layVerify}" readonly lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{$label}" name="{$name}" data-name="name_{$build_view_rand}"  value="{$value}"  placeholder="{:lang('build_view_please_select')}{$label}" class="layui-input">
         {/if}
+        {$appendHtml|raw}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
