--- a/src/view/selectGroup.html
+++ b/src/view/selectGroup.html
@@ -11,7 +11,7 @@
              </optgroup>
             <!--{/foreach}-->
         </select>
-        <!--{$appendHtml|raw}-->
+        {$appendHtml|raw}
         <!--{notempty name="$help"}-->
         <div class="help-block">{$help}</div>
         <!--{/notempty}-->
