--- a/src/view/table.html
+++ b/src/view/table.html
@@ -49,7 +49,7 @@
             {/if}
              {if !isset($hidePage)}
             ,page: {
-                limit:20
+                limit:{$pageLimit|default='20'}
                 ,limits:[10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200]
             }
             {/if}
