--- a/src/view/ckeditor.html
+++ b/src/view/ckeditor.html
@@ -1,19 +1,17 @@
 <div class="layui-form-item layui-form-text">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
-
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
         {if isset($required)}<input type="hidden" required>{/if}
-        <textarea name="{$name}" {volist name="attr" id="vo"}{$vo}{/volist} placeholder="{:lang('build_view_please_input')}{$label}" data-name="name_{$build_view_rand}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_input')}{$label}" class="layui-textarea">{$value}</textarea>
-        {$appendHtml|raw}
+        <textarea name="{$name}" placeholder="{:lang('build_view_please_input')}{$label}" data-name="name_{$build_view_rand}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_input')}{$label}" class="layui-textarea">{$value}</textarea>
     </div>
 </div>
 <script>
     require(['ckeditor'], function () {
         let i = Math.ceil(Math.random()*10000000);
         $('[data-name=name_{$build_view_rand}]').attr('id','build_id_'+i);
-        window.createEditor('#'+'build_id_'+i, {height: {$height|default='500'}});
+        window.createEditor('#'+'build_id_'+i, {height: {$height|default='500'}{if isset($width)},width: {$width}{/if}});
     });
 </script>
