--- a/src/view/hasMany.html
+++ b/src/view/hasMany.html
@@ -4,7 +4,7 @@
         <div class="layui-row" id="hasMany{$name}">
             {$value|raw}
         </div>
-        <div class="layui-input-block"><button type="button" class="layui-btn layui-btn-normal" data-hasMany="hasManyAdd">{:lang('build_view_add_btn')}</button></div>
+        <div class="layui-input-block"><button type="button" class="layui-btn layui-btn-normal" data-hasMany="hasManyAdd{$name}">{:lang('build_view_add_btn')}</button></div>
     </div>
 </fieldset>
 <script>
@@ -13,7 +13,7 @@
     $('button[data-hasMany=hasManyDel]').click(function(){
         $(this).parent().parent().parent('.layui-row').remove();
     });
-    $('button[data-hasMany=hasManyAdd]').click(function(){
+    $('button[data-hasMany=hasManyAdd{$name}]').click(function(){
 
         $('#hasMany{$name}').append(hasMany{$name});
         $('button[data-hasMany=hasManyDel]').click(function(){
