新增视频插件mediaelement，音频视频显示

--- a/src/view/detail.html
+++ b/src/view/detail.html
@@ -16,7 +16,8 @@
 <!--{/notempty}-->
 <!--{/block}-->
 {block name="content"}
-
+<link href="/vendor/build-view/plugs/mediaelement/mediaelementplayer.css" rel="stylesheet">
+<script src="/vendor/build-view/plugs/mediaelement/mediaelement-and-player.js"></script>
 <div class="layui-card-body ">
     <div class="layui-row layui-col-space15 layui-form">
         {$detail|raw}
