--- a/src/view/grid.html
+++ b/src/view/grid.html
@@ -70,6 +70,8 @@
 <!--{/notempty}-->
 <!--{/block}-->
 <!--{block name='content'}-->
+<link href="/vendor/build-view/plugs/mediaelement/mediaelementplayer.css" rel="stylesheet">
+<script src="/vendor/build-view/plugs/mediaelement/mediaelement-and-player.js"></script>
     <div class="layui-card-body layui-anim layui-anim-upbit ">
         <div class="layui-card-body think-box-shadow">
                 {$filter|raw}
