修复一对多select，radio，image问题，操作栏按钮可设置标题文本，修复一对多未知bug，导入新增行回调数据，新增from中的rate星级组件

--- a/src/view/image.html
+++ b/src/view/image.html
@@ -116,6 +116,7 @@ $value = implode('|',$value);
     };
     let i = Math.ceil(Math.random()*10000000);
     $('[data-name=name_{$build_view_rand}]').attr('id','build_id_'+i);
+	$('[data-name=name_{$build_view_rand}]').attr('data-name','build_id_'+i);
     /*{if isset($multiple)}*/
     $('#build_id_'+i).uploadMultipleImages();
     /*{else/}*/
