--- a/src/view/hasMany.html
+++ b/src/view/hasMany.html
@@ -16,6 +16,7 @@
     $('button[data-hasMany=hasManyAdd{$name}]').click(function(){
 
         $('#hasMany{$name}').append(hasMany{$name});
+		 window.form.render();
         $('button[data-hasMany=hasManyDel]').click(function(){
             $(this).parent().parent().parent('.layui-row').remove();
         });
