--- a/src/view/select.html
+++ b/src/view/select.html
@@ -21,7 +21,7 @@
 
     let i = Math.ceil(Math.random()*10000000);
     $('[data-name=name_{$build_view_rand}]').attr('lay-filter','build_id_'+i);
-
+    $('[data-name=name_{$build_view_rand}]').attr('data-name','build_id_'+i);
     /*{if isset($event)}*/
     form.on('select(build_id_'+i+')', function (data) {
         {$event|raw}
@@ -35,13 +35,32 @@
             for(var x in data){
                 str += '<option value = "' + data[x].id + '">' + data[x].text + '</option>'
             }
+            var load = false;
+            $('select').each(function (index,item) {
+                if(load){
+                    load =false;
+                    $(item).attr('lay-filter')
+                    $(item).html(str);
+                    layui.use([ 'formSelects'], function(){
+                        let formSelects = layui.formSelects;
+                        var xm_select = $(item).attr('xm-select');
+                        formSelects.render(xm_select,{
+                            init:[],
+                        });
+                    });
+                }
+                if($(item).attr('lay-filter') == 'build_id_'+i){
+                    load =true;
+                }
+            });
             $('select[name={$load[0]}]').html(str);
-            form.render('select'); 
+            form.render('select');
         });
     });
     /*{/if}*/
     /*{if isset($multiple)}*/
-    $('[data-name=name_{$build_view_rand}]').attr('xm-select','build_id_'+i);
+    $('[data-name=build_id_'+i+']').attr('xm-select','build_id_'+i);
+    $('[data-name=build_id_'+i+']').attr('data-name','build_id_'+i);
     layui.extend({
         formSelects:'/vendor/build-view/plugs/formSelect/formSelects-v4',
     });
