调整iframe 筛选问题

--- a/src/view/filter.html
+++ b/src/view/filter.html
@@ -40,7 +40,7 @@
 <fieldset class="layui-elem-field" >
     <legend style="margin-bottom:0px">{:lang('build_view_filter_search_desc')}</legend>
     <div class="layui-field-box">
-    <form class="layui-form layui-form-pane form-search" action="{:request()->url()}" onsubmit="return filterSubmit()" method="get" autocomplete="off">
+    <form class="layui-form layui-form-pane form-search" action="{:url('','',false)}" onsubmit="return filterSubmit(this)" method="get" autocomplete="off">
         {$filter|raw}
         <div class="layui-form-item layui-inline">
             <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> {:lang('build_view_filter_search')}</button>
@@ -50,8 +50,9 @@
 </fieldset>
 <script>
     form.render()
-    function filterSubmit(){
+    function filterSubmit(dom){
         if (window.frames.length != parent.frames.length) {
+            $(dom).attr('class','layui-form layui-form-pane');
             return true;
         }else{
             return false;
