--- a/src/view/table.html
+++ b/src/view/table.html
@@ -37,6 +37,8 @@
         var excel_page=0;
         var table = layui.table;
         var page = 1;
+        var sortable_start = false,sortable_end = false;
+        var sortable_start_data,sortable_end_data;
         if(localStorage.getItem('build_view_url') == '{:md5(request()->url())}'){
             page = localStorage.getItem('{:md5(request()->url())}')
         }
@@ -61,6 +63,33 @@
             ,cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
             ,cols: {$name|raw}
             ,done:function(res,curr,count){
+
+                /*{if isset($sortField)}*/
+                require(['/vendor/build-view/plugs/Sortable.min.js'],function(Sortable){
+                    var sortable = new Sortable(document.querySelector('tbody'), {
+                        // Element dragging started
+                        onStart: function (/**Event*/evt) {
+                            sortable_start = true;
+                            evt.item.click();
+                        },
+
+                        // Element dragging ended
+                        onEnd: function (/**Event*/evt) {
+                            if(evt.newIndex != evt.oldIndex){
+                                sortable_end = true;
+                                if(evt.newIndex < evt.oldIndex){
+                                    index = evt.newIndex+1;
+
+                                }else{
+                                    index = evt.newIndex-1;
+
+                                }
+                                evt.from.rows[index].click();
+                            }
+                        },
+                    });
+                });
+                /*{/if}*/
                 excel_limit = res.data.length;
                 excel_page = curr;
                 localStorage.setItem('build_view_url','{:md5(request()->url())}');
@@ -132,6 +161,17 @@
                 }
             }
         });
+        table.on('row({$tableId})', function(obj){
+            if(sortable_start){
+                sortable_start = false;
+                sortable_start_data = obj.data;
+            }
+            if(sortable_end){
+                sortable_end = false;
+                sortable_end_data = obj.data;
+                $.post("{:request()->url()}",{start_data:sortable_start_data,end_data:sortable_end_data,field:'buldview_drag_sort'});
+            }
+        });
         //刷新
         $('#sortButton').click(function(){
            $.form.reload();
@@ -160,7 +200,7 @@
             }
 
             datas.id = ids;
-            console.log(datas);
+
             let url = $(this).data('url');
             $.msg.confirm('确定要操作这些数据吗？', function () {
                 $.form.load(url, datas, 'post');
