修复checkbox无数据js报错bug

--- a/src/view/checkbox.html
+++ b/src/view/checkbox.html
@@ -11,6 +11,7 @@
     </div>
 </div>
 <script>
+    /*{if count($options) > 0}*/
     let i = Math.ceil(Math.random()*10000000)
     $('[data-name=name_{$build_view_rand}]').attr('lay-filter','build_id_'+i);
     let name = $('[data-name=name_{$build_view_rand}]').attr('name');
@@ -18,4 +19,5 @@
         name = name.replace('[]','');
         $('[data-name=name_{$build_view_rand}]').attr('name',name+'['+i+']');
     }
+    /*{/if}*/
 </script>
