--- a/src/view/filter.html
+++ b/src/view/filter.html
@@ -44,12 +44,18 @@
         {$filter|raw}
         <div class="layui-form-item layui-inline">
             <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> {:lang('build_view_filter_search')}</button>
+			<button class="layui-btn layui-btn-primary" type="button" onclick="restartFilter()">重置</button>
         </div>
     </form>
     </div>
 </fieldset>
 <script>
     form.render()
+	 function restartFilter() {
+        $('.form-search').find('input,select').each(function() {
+            $(this).val('');
+        });
+    }
     function filterSubmit(dom){
         if (window.frames.length != parent.frames.length) {
             $(dom).attr('class','layui-form layui-form-pane');
