--- a/src/view/nestable.html
+++ b/src/view/nestable.html
@@ -1,4 +1,3 @@
-
 <link rel="stylesheet" href="/vendor/build-view/plugs/nestable/jquery.nestable.min.css">
 <style>
     .dd-handle {
@@ -16,6 +15,7 @@
         box-sizing: border-box;
     }
 </style>
+{$filter|raw}
 <div class="layui-btn-group" style="margin-bottom: 20px">
 <button class="layui-btn layui-btn-sm" onclick="$('.dd').nestable('expandAll')"><i class="layui-icon layui-icon-addition"></i>展开</button>
 <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="$('.dd').nestable('collapseAll')"><i class="layui-icon layui-icon-subtraction"></i>收缩</button>
@@ -24,7 +24,6 @@
 <div class="dd" id="{$nestableId}">
     <ol class="dd-list"></ol>
 </div>
-
 <script type="text/javascript" src="vendor/build-view/plugs/nestable/jquery.nestable.min.js"></script>
 <script data-exec-on-popstate>
     $(document).ready(function(){
