--- a/src/view/select.html
+++ b/src/view/select.html
@@ -55,6 +55,39 @@
             });
             $('select[name={$load[0]}]').html(str);
             form.render('select');
+            var params = {};
+            params.value = $('select[name={$load[0]}]').val();
+            var nextSelect = $('select[name={$load[0]}]').attr('lay-filter');
+            layui.event('form','select('+nextSelect+')',params);
+            $(this).trigger('click');
+        });
+    });
+        $.post("{:url($load[1])}",{q:data.value},function(result,status){
+            var data = result.data;
+            var str = '';
+            for(var x in data){
+                str += '<option value = "' + data[x].id + '">' + data[x].text + '</option>'
+            }
+            var load = false;
+            $('select').each(function (index,item) {
+                if(load){
+                    load =false;
+                    $(item).attr('lay-filter')
+                    $(item).html(str);
+                    layui.use([ 'formSelects'], function(){
+                        let formSelects = layui.formSelects;
+                        var xm_select = $(item).attr('xm-select');
+                        formSelects.render(xm_select,{
+                            init:[],
+                        });
+                    });
+                }
+                if($(item).attr('lay-filter') == 'build_id_'+i){
+                    load =true;
+                }
+            });
+            $('select[name={$load[0]}]').html(str);
+            form.render('select');
         });
     });
     /*{/if}*/
